--- a/desafios/dx010/style.css
+++ b/desafios/dx010/style.css
@@ -40,6 +40,10 @@ body {
     font-family: var(--fonte-padrão);
 }
 
+a.externo::after {
+    content: '\00A0\2197';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
@@ -62,6 +66,7 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
+    margin-bottom: 30px;
     text-shadow: 2px 2px 0px rgb(0, 0, 0.2);
 }
 
@@ -72,7 +77,7 @@ nav {
 }
 
 nav a {
-    color: #ffffff;
+    color: var(--cor2);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -145,10 +150,35 @@ main img.pequena {
     margin: auto;
 }
 
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 55%;
+    position: relative;
+}
+
+div.video iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 aside {
     background-color: var(--cor2);
     padding: 10px;
     border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+}
+
+aside h3 {
+    background-color: var(--cor4);
+    color: #ffffff;
+    padding: 10px;
+    margin: -10px -10px 10px -10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 aside ul {
