--- a/desafios/dx022/estilo/style.css
+++ b/desafios/dx022/estilo/style.css
@@ -6,6 +6,21 @@ margin: 0;
 padding: 0;
 }
 
+:root{
+    --cor1: #FFF000;
+    --cor2: #0099FF;
+    --cor3: #0055FF;
+    --cor4: #FFFFFF;
+    --cor5: #000000;
+    --cor6: #FF7800;
+    --cor7: #A52A2A;
+    --cor8: #4A260B;
+
+    --fonte-padrão: arial, verdana, helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', 'cursive';
+    --font-freefire: 'UrbanJungleDEMO', 'cursive'; 
+}
+
 .container{
     width: 100vw;
     height: 100vh;
@@ -16,9 +31,17 @@ padding: 0;
 }
 
 .caixa{
-    background-color: rgba(193, 213, 240, 0.699);
+    background-color: rgba(255, 255, 255, 0.699);
     padding: 10px;
     text-align: center;
+}
+
+p{
+    margin: 15px 0px;   
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1.1em;
+    line-height: 2em;
 }
 
 #topo {
@@ -29,6 +52,22 @@ padding: 0;
 #menu {
     grid-row: 2 / 2;
     grid-column: 1 / -1;
+
+    padding: 10px;
+}
+
+nav a {
+    color: var(--cor2);
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition-duration: .5s    ;
+}
+
+nav a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
 }
 
 #principal {
@@ -39,6 +78,10 @@ padding: 0;
 #secundario {
     grid-row: 3 / 3;
     grid-column: 2 / -1;
+}
+
+aside > img{
+
 }
 
 #rodapé {
